# etl_pipeline

./: .gitignore  README.md
specs/: README.md  (+25 more)
src/aggregator/: Dockerfile  README.md  pyproject.toml
src/aggregator/src/: main.py
src/aggregator/src/server/: main.py  models.py  routes.py
src/aggregator/src/services/: api_client.py  config.py  data_quality.py  descriptive_stats.py  pipeline_performance.py  taxi_comparison.py  temporal_patterns.py
src/aggregator/tests/: conftest.py  test_api_client.py  test_data_quality.py  test_descriptive_stats.py  test_integration.py  test_pipeline_performance.py  test_routes.py  test_taxi_comparison.py  test_temporal_patterns.py
src/analyzer/: Dockerfile  README.md  pyproject.toml
src/analyzer/src/: main.py
src/analyzer/src/server/: main.py  models.py  routes.py
src/analyzer/src/services/: api_server_client.py  config.py  registry.py  step_executor.py
src/analyzer/src/services/base/: cleaning_utils.py  data_cleaning.py  descriptive_statistics.py  fare_revenue_analysis.py  geospatial_analysis.py  temporal_analysis.py
src/analyzer/src/services/fhv/: data_cleaning.py  descriptive_statistics.py  fare_revenue_analysis.py  geospatial_analysis.py  temporal_analysis.py
src/analyzer/src/services/fhvhv/: data_cleaning.py  descriptive_statistics.py  fare_revenue_analysis.py  geospatial_analysis.py  temporal_analysis.py
src/analyzer/src/services/green/: data_cleaning.py  descriptive_statistics.py  fare_revenue_analysis.py  geospatial_analysis.py  temporal_analysis.py
src/analyzer/tests/: test_api_server_client.py  test_base_classes.py  test_config.py  test_data_cleaning.py  test_descriptive_statistics.py  test_fare_revenue_analysis.py  test_geospatial_analysis.py  test_integration.py  test_integration_api_server.py  test_models.py  test_registry.py  test_routes.py  test_step_executor.py  test_swagger.py  test_temporal_analysis.py
src/api_server/: Dockerfile  README.md  pyproject.toml
src/api_server/src/: main.py
src/api_server/src/server/: main.py  models.py  routes.py
src/api_server/src/services/: config.py  crud.py  database.py  metrics.py
src/api_server/tests/: test_config.py  test_crud.py  test_database.py  test_integration.py  test_metrics.py  test_routes.py
src/scheduler/: Dockerfile  README.md  pyproject.toml
src/scheduler/src/: main.py
src/scheduler/src/server/: main.py  models.py  routes.py
src/scheduler/src/services/: analyzer_client.py  api_server_client.py  config.py  dag.py  database.py  pipeline.py  prefect_flows.py  scheduler.py  state_manager.py  taxi_type.py
src/scheduler/tests/: test_analyzer_client.py  test_api_server_client.py  test_config.py  test_dag_cycle_detection.py  test_dag_ready_steps.py  test_dag_resume.py  test_dag_topo_sort.py  test_database.py  test_models.py  test_pipeline.py  test_prefect_flows.py  test_routes.py  test_scheduler.py  test_state_manager.py  test_swagger.py  test_taxi_type.py
src/scheduler/tests/integration/: test_branching_pipeline.py  test_branching_resume.py  test_linear_compat.py
src/translator/: Dockerfile  README.md  pyproject.toml
src/translator/src/server/: main.py  models.py  routes.py
src/translator/src/services/: config.py  db.py  executor.py  generator.py  http_client.py  parser.py
src/translator/tests/: conftest.py  test_db.py  test_executor.py  test_generator.py  test_http_client.py  test_models.py  test_parser.py  test_routes.py
src/utilities/: Dockerfile  pyproject.toml  s3.py
src/utilities/tests/: test_s3.py
(+40 files in other folders)
