[project]
name = "analyzer"
version = "0.1.0"
description = "Analytical processing service for NYC TLC data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "polars>=1.0.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "pyarrow>=18.0.0",
    "httpx>=0.28.0",
    "boto3>=1.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "testcontainers>=4.9.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
