[project]
name = "utilities"
version = "0.1.0"
description = "Shared utilities for thesis services"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "testcontainers>=4.9.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
